--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: District F
+name: the Blog of Marquis.F
 description: I've just built this site... Some other information will be filled soon...
 meta_description: "Your New Jekyll Site, Blogging about stuffs"
 
